...
                        android:layout_height="wrap_content"
                        android:text="Firstname"
                        android:textSize="19sp"
                        android:textColor="@color/white"
                        android:paddingHorizontal="10dp"/>
                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:hint="@string/hint_first_name"
                    android:paddingHorizontal="10dp"
                    android:textSize="15sp"
...
                        android:text="Birthday"
                        android:textSize="19sp"
                        android:textColor="@color/white"
                        android:paddingHorizontal="10dp"/>

            <EditText
                android:id="@+id/et_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_birth_date"
                android:inputType="date"
                android:paddingHorizontal="10dp"
                android:textSize="15sp"
...
