...

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Name :"
                        android:textColor="#FFFFFF" />

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
